syntax = "proto3";
package favorite.video;
option go_package = "favorite";

message User {
  int64 id = 1; // 用户ID
  string name = 2; // 用户名
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // 是否关注，true：关注；false：未关注
}

message Video {
  int64 id = 1; // 视频 ID
  User author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频点赞总数
  int64 comment_count = 6; // 视频评论总数
  bool is_favorite = 7; // 是否点赞，true：已点赞；false：未点赞
  string title = 8; // 视频标题
}

message BaseResponse {
  int32 status_code = 1;
  string status_msg = 2;
}

message favoriteRequest {
  int64 user_id = 1; // 用户 ID
  int64 video_id = 2; // 视频 ID
  int32 action_type = 3; // 操作类型，1：点赞，2：取消点赞
}

message favoriteResponse {
  BaseResponse base_resp = 1;
}

message favoriteListRequest {
  int64 user_id = 1; // 用户 ID
}

message favoriteListResponse {
  repeated Video video_list = 1; // 点赞的视频列表
  BaseResponse base_resp = 2; // 状态信息
}

service FavoriteVideoServer {
  rpc Favorite (favoriteRequest) returns (favoriteResponse) {}
  rpc FavoriteList (favoriteListRequest) returns (favoriteListResponse) {}
}